* 2017/06/06
  - Mise en place de la gestion des variable pour heure (<hh:mm:ss>) et date (<jj/mm/aa> et <jj/mm>)
  - Mise en place de la gestion du nombre de MAX7219 dans la tructure config et EEPROM,
  -=- BUG : le nombre MAX7219 est bien sauvegardé, mais n'a pas l'aire d'etre pris en compte 
        Peut etre du au faite de l'initialiser 2 fois pour que ce soit une variable globale
  - TODO : Ajouté a la page principale un bulle d'aide pour les variables et a terme les caractere spéciaux 
        ex : Train, température, pluie, soleil, .......


* 2017/06/05
  - Creation de la fct de recuperation des valeurs actuel pour message
  - Amélioration de l'affichage de la page de saisie de message
  
* 2017/06/04
 - Fin de la gestion de config avec mise en place d'un CSS dédier et d'un fichier ico associé
 - Creation du fichier PAge_Message.h qui reprend les fonction qui existait dans .ino
 TODO : 
    Regrouper toutes les HEADER et FOOTER des pages

* 2017/06/02
 - Ajout de la gestion de configuration en mode AP d'après :
   https://www.john-lassen.de/en/projects/esp-8266-arduino-ide-webconfig

* 2017/05/28
 - Ajout de 2 module suplémentaire.
 - Pour afficher des police 5 Bit, il faut tout refaire au niveau de l'envoie des donnée
 - Gestion d'un état qui permet d'économiser l'énergie, en arrêtant le Led, mais sans metre encore le controleur dans un etat de sommeil

* 2017/05/26
 - LE problème c'est que tous l'algo est pensé pour envoyé 8 bit * 8bit pour chaque caracetere
 - Quand on en envoie 6 x 6 il faut generer les caracteres suivant avant mais comment ??????

* 2017/05/22
 - ajout d'une font 5 bit de large et tentative d'inserer dans MAX7219_Dot_Matrix::sendSmooth
   -> Les caracteres ne sont pas plus sérré ??????????

* 2017/05/21
 - Ajout de la librairie NTP : https://github.com/arduino-libraries/NTPClient
  -=- Reste a géré le Problème de changement d'heure.
 - LE capteur de presence ne fonctionne toujours pas

* 2017/05/20 